--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,102 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gulp's Template</title>
-    <link rel="stylesheet" href="./css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
+  <main class="portfolio">
+    <h1 class="primary">Lista Projektów</h1>
+    <ol class="portfolio__list">
+      <li class="portfolio__item">
+        <a target="_blank" href="https://silvervian.github.io/WWDChallenge01/" class="portfolio__link"><span class="strong">LIVE:
+          </span>
+          Contact
+          Forms - Weekly WebDev Challenge - Zadanie 1</a>
+        <ul>
+          <li class="portfolio__code">
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+                Link to Code -</span></a>
+          </li>
+        </ul>
+      </li>
+      <li class="portfolio__item">
+        <a target="_blank" href="https://silvervian.github.io/WWDChallenge02/dist/" class="portfolio__link"><span class="strong">LIVE:
+          </span>Cahee
+          - Weekly WebDev Challenge - Zadanie 2</a>
+        <ul>
+          <li class="portfolio__code">
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong"><span
+                  class="strong">-
+                  Link to Code -</span></span></a>
+          </li>
+        </ul>
+      </li>
+      <li class="portfolio__item">
+        <a target="_blank" href="https://silvervian.github.io/WWDChallenge03/dist/" class="portfolio__link"><span class="strong">LIVE:
+          </span>Treehouse
+          - Weekly WebDev
+          Challenge - Zadanie 3</a>
+        <ul>
+          <li class="portfolio__code">
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+                Link to
+                Code -</span></a>
+          </li>
+        </ul>
+      </li>
+      <li class="portfolio__item">
+        <a target="_blank" href="https://silvervian.github.io/WWDChallenge08/dist/" class="portfolio__link"><span class="strong">LIVE:
+          </span>DSGN
+          - Weekly WebDev Challenge - Zadanie 8</a>
+        <ul>
+          <li class="portfolio__code">
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+                Link to Code -</span></a>
+          </li>
+        </ul>
+      </li>
+      <li class="portfolio__item">
+        <a target="_blank" href="https://silvervian.github.io/WWDChallenge11/dist/" class="portfolio__link"><span class="strong">LIVE:
+          </span>YokNgalm
+          - Weekly WebDev Challenge - Zadanie 11</a>
+        <ul>
+          <li class="portfolio__code">
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+                Link to Code -</span></a>
+          </li>
+        </ul>
+      </li>
+      <li class="portfolio__item">
+        <a target="_blank" href="https://silvervian.github.io/WWDChallenge34/dist/" class="portfolio__link"><span class="strong">LIVE:
+          </span>MegawuHost
+          - Weekly WebDev Challenge - Zadanie 34</a>
+        <ul>
+          <li class="portfolio__code">
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+                Link to Code -</span></a>
+          </li>
+        </ul>
+      </li>
+      <li class="portfolio__item">
+        <a target="_blank" href="https://www.jedrczak.pl/medicalhospital/" class="portfolio__link"><span class="strong">LIVE:
+          </span>Medical
+          Hospital</a>
+        <ul>
+          <li class="portfolio__code">
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+                Link to Code -</span></a>
+          </li>
+        </ul>
+      </li>
+    </ol>
+  </main>
 
-    <script src="./js/app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
