Add new favicon

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,7 @@
     <ol class="portfolio__list">
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge01/" class="portfolio__link"><span class="strong">LIVE:
-          </span>
-          Contact
-          Forms - Weekly WebDev Challenge - Zadanie 1</a>
+          </span>Masteralb - Weekly WebDev Challenge - Zadanie 1</a>
         <ul>
           <li class="portfolio__code">
             <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
@@ -91,7 +89,7 @@
         <ul>
           <li class="portfolio__code">
             <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
-                Link to Code -</span></a>
+                Link to Code - [front]</span></a>
           </li>
         </ul>
       </li>
