Fix correct links to projects

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <ol class="portfolio__list">
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge01/" class="portfolio__link"><span class="strong">LIVE:
-          </span>Masteralb - Weekly WebDev Challenge - Zadanie 1</a>
+          </span>Masteralb - WWDChallenge - Zadanie 1</a>
         <ul>
           <li class="portfolio__code">
             <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
@@ -27,10 +27,10 @@
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge02/dist/" class="portfolio__link"><span class="strong">LIVE:
           </span>Cahee
-          - Weekly WebDev Challenge - Zadanie 2</a>
+          - WWDChallenge - Zadanie 2</a>
         <ul>
           <li class="portfolio__code">
-            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong"><span
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge02" class="portfolio__link"><span class="strong"><span
                   class="strong">-
                   Link to Code -</span></span></a>
           </li>
@@ -39,11 +39,10 @@
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge03/dist/" class="portfolio__link"><span class="strong">LIVE:
           </span>Treehouse
-          - Weekly WebDev
-          Challenge - Zadanie 3</a>
+          - WWDChallenge - Zadanie 3</a>
         <ul>
           <li class="portfolio__code">
-            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge03" class="portfolio__link"><span class="strong">-
                 Link to
                 Code -</span></a>
           </li>
@@ -52,43 +51,43 @@
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge08/dist/" class="portfolio__link"><span class="strong">LIVE:
           </span>DSGN
-          - Weekly WebDev Challenge - Zadanie 8</a>
+          - WWDChallenge - Zadanie 8</a>
         <ul>
           <li class="portfolio__code">
-            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge08" class="portfolio__link"><span class="strong">-
                 Link to Code -</span></a>
           </li>
         </ul>
       </li>
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge11/dist/" class="portfolio__link"><span class="strong">LIVE:
-          </span>YokNgalm
-          - Weekly WebDev Challenge - Zadanie 11</a>
+          </span>YokNgalam
+          - WWDChallenge - Zadanie 11</a>
         <ul>
           <li class="portfolio__code">
-            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge11" class="portfolio__link"><span class="strong">-
                 Link to Code -</span></a>
           </li>
         </ul>
       </li>
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge34/dist/" class="portfolio__link"><span class="strong">LIVE:
-          </span>MegawuHost
-          - Weekly WebDev Challenge - Zadanie 34</a>
+          </span>MaguwoHost
+          - WWDChallenge - Zadanie 34</a>
         <ul>
           <li class="portfolio__code">
-            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+            <a target="_blank" href="https://github.com/silvervian/WWDChallenge34" class="portfolio__link"><span class="strong">-
                 Link to Code -</span></a>
           </li>
         </ul>
       </li>
       <li class="portfolio__item">
         <a target="_blank" href="https://www.jedrczak.pl/medicalhospital/" class="portfolio__link"><span class="strong">LIVE:
-          </span>Medical
-          Hospital</a>
+          </span>Medical Hospital [WordPress]</a>
         <ul>
           <li class="portfolio__code">
-            <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
+            <a target="_blank" href="https://github.com/silvervian/Medical-Hospital" class="portfolio__link"><span
+                class="strong">-
                 Link to Code - [front]</span></a>
           </li>
         </ul>
