--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <ol class="portfolio__list">
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge01/" class="portfolio__link"><span class="strong">LIVE:
-          </span>Masteralb - WWDChallenge - Zadanie 1</a>
+          </span>Masteralb - WWDChallenge - 1</a>
         <ul>
           <li class="portfolio__code">
             <a target="_blank" href="https://github.com/silvervian/WWDChallenge01" class="portfolio__link"><span class="strong">-
@@ -26,8 +26,8 @@
       </li>
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge02/dist/" class="portfolio__link"><span class="strong">LIVE:
-          </span>Cahee
-          - WWDChallenge - Zadanie 2</a>
+          </span> Cahee
+          - WWDChallenge - 2</a>
         <ul>
           <li class="portfolio__code">
             <a target="_blank" href="https://github.com/silvervian/WWDChallenge02" class="portfolio__link"><span class="strong"><span
@@ -39,7 +39,7 @@
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge03/dist/" class="portfolio__link"><span class="strong">LIVE:
           </span>Treehouse
-          - WWDChallenge - Zadanie 3</a>
+          - WWDChallenge - 3</a>
         <ul>
           <li class="portfolio__code">
             <a target="_blank" href="https://github.com/silvervian/WWDChallenge03" class="portfolio__link"><span class="strong">-
@@ -51,7 +51,7 @@
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge08/dist/" class="portfolio__link"><span class="strong">LIVE:
           </span>DSGN
-          - WWDChallenge - Zadanie 8</a>
+          - WWDChallenge - 8</a>
         <ul>
           <li class="portfolio__code">
             <a target="_blank" href="https://github.com/silvervian/WWDChallenge08" class="portfolio__link"><span class="strong">-
@@ -62,7 +62,7 @@
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge11/dist/" class="portfolio__link"><span class="strong">LIVE:
           </span>YokNgalam
-          - WWDChallenge - Zadanie 11</a>
+          - WWDChallenge - 11</a>
         <ul>
           <li class="portfolio__code">
             <a target="_blank" href="https://github.com/silvervian/WWDChallenge11" class="portfolio__link"><span class="strong">-
@@ -73,7 +73,7 @@
       <li class="portfolio__item">
         <a target="_blank" href="https://silvervian.github.io/WWDChallenge34/dist/" class="portfolio__link"><span class="strong">LIVE:
           </span>MaguwoHost
-          - WWDChallenge - Zadanie 34</a>
+          - WWDChallenge - 34</a>
         <ul>
           <li class="portfolio__code">
             <a target="_blank" href="https://github.com/silvervian/WWDChallenge34" class="portfolio__link"><span class="strong">-
